<resources>
    <string name="app_name">Popular Movies App</string>
    <string name="action_settings">Settings</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="action_upcoming">Upcoming</string>
    <string name="action_now_playing">Now Playing</string>
    <string name="title_activity_detail">Movie Detail</string>

    <string name="query_popular">popular</string>
    <string name="query_top_rated">top_rated</string>
    <string name="query_upcoming">upcoming</string>
    <string name="query_now_playing">now_playing</string>
    <string name="no_internet_connection">No Internet connection.</string>
    <string name="no_movie">No movies found.</string>
    <string name="action_favorite">Favorite</string>
    <string name="menu_sort_by">Sort by</string>
</resources>
