<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto?">
    <item
        android:id="@+id/action_sort"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_popular"
                    android:checked="true"
                    android:title="@string/action_popular"/>
                <item
                    android:id="@+id/action_top_rated"
                    android:title="@string/action_top_rated"/>
                <item
                    android:id="@+id/action_upcoming"
                    android:title="@string/action_upcoming"/>
                <item
                    android:id="@+id/action_now_playing"
                    android:title="@string/action_now_playing"/>
                <item
                    android:id="@+id/action_favorite"
                    android:title="@string/action_favorite"/>
            </group>
        </menu>
    </item>
</menu>